src/test/pass/match/match_nested.lly
enum class Option[A] {
    Some(A),
    None
}

var opt: Option[Option[integer]] = Some(Some(10))

match opt: {
    case Some(s):
        match s: {
            case Some(s2):
            case None:
                stderr.write("Failed.\n")
        }
    case None:
        stderr.write("Failed.\n")
}
