src/test/fail/enums_and_variants/partial_scoped_variant.lly
#[
SyntaxError: Expected '::', not a label.
Where: File "partial_scoped_variant.lly" at line 8
]#

enum class Option[A] {
	::Some(A),
	None
}
